dataset, model building

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,11 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os "
    ]
   },
   {
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +163,7 @@
        "[45654 rows x 2 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,47 +176,212 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dataset, DataLoader"
+    "# Make Dataset, DataLoader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from eunjeon import Mecab\n",
-    "from tqdm import tqdm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tokenizer = Mecab()"
+    "# from eunjeon import Mecab\n",
+    "# from kobert_tokenizer import KoBERTTokenizer\n",
+    "from transformers import AutoTokenizer\n",
+    "import tqdm as tqdm\n",
+    "import numpy as np\n",
+    "\n",
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tokenizer = KoBERTTokenizer.from_pretrained('skt/kobert-base-v1')\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"klue/roberta-large\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Mecab' object has no attribute 'tokenize'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\jaeng\\Desktop\\VSC\\DACON\\text_classification\\main.ipynb 셀 10\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/jaeng/Desktop/VSC/DACON/text_classification/main.ipynb#X16sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m tokenizer\u001b[39m.\u001b[39;49mtokenize(\u001b[39m'\u001b[39m\u001b[39m안녕하십니까 귀가 가려워요ㅋㅋㅋ\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Mecab' object has no attribute 'tokenize'"
-     ]
+     "data": {
+      "text/plain": [
+       "29"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "tokenizer.tokenize('안녕하십니까 귀가 가려워요ㅋㅋㅋ')"
+    "MAX_LEN = 0\n",
+    "\n",
+    "for d in train_data['title']:\n",
+    "    td = tokenizer.encode(d)\n",
+    "    if MAX_LEN < len(td):\n",
+    "        MAX_LEN = len(td)\n",
+    "\n",
+    "MAX_LEN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'인천→핀란드 항공기 결항…휴가철 여행객 분통'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data['title'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data를 token과 label로 분리해 numpy로 반환해준다.\n",
+    "def convert_data(tokenizer, data_df, case):\n",
+    "    tokens, masks, segments, targets = [], [], [], []\n",
+    "    \n",
+    "    for i in tqdm(range(len(data_df))):\n",
+    "        # tokenize\n",
+    "        token = tokenizer.encode(data_df['title'][i], max_length=MAX_LEN, padding='max_length', truncation=True)[1:-1]\n",
+    "        \n",
+    "        # making segment\n",
+    "        # segment = [0]*MAX_LEN\n",
+    "        \n",
+    "        # token, segment\n",
+    "        tokens.append(token)\n",
+    "        # segments.append(segments)\n",
+    "        \n",
+    "        if case == 'train':\n",
+    "            targets.append(data_df['topic_idx'][i])\n",
+    "    \n",
+    "    tokens = np.array(tokens)\n",
+    "    \n",
+    "    if case == 'train':\n",
+    "        targets = np.array(targets)\n",
+    "        \n",
+    "        return [tokens, segments], targets\n",
+    "    \n",
+    "    return [tokens, segments],\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "\n",
+    "class CustomDataset(Dataset):\n",
+    "    def __init__(self, csv_path, tokenizer):\n",
+    "        self.data = pd.read_csv(csv_path)\n",
+    "        self.tokenizer = tokenizer\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.data)\n",
+    "\n",
+    "    def __getitem_(self, idx):\n",
+    "        context = tokenizer.encode(self.data['title'][idx])[1:-1]\n",
+    "        label = int(self.data['topic_idx'][idx])\n",
+    "        \n",
+    "        context = torch.Tensor(context)\n",
+    "        label = torch.Tensor(label)\n",
+    "        \n",
+    "        return context, label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BATCH_SIZE = 64\n",
+    "\n",
+    "# get tokenizer\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"klue/roberta-large\")\n",
+    "\n",
+    "# make dataset\n",
+    "train_dataset = CustomDataset('./dataset/train_data.csv', tokenizer=tokenizer)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "\n",
+    "test_dataset = CustomDataset('./dataset/test_data.csv', tokenizer=tokenizer)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=BATCH_SIZE, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Build Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "transformer 의 encdoer n개를 통과시켜 Affine Layer을 지나는 model이다.\n",
+    "\n",
+    "- d_model = 512\n",
+    "- d_word_vec = 512\n",
+    "- n_layers = 6\n",
+    "- n_head = 8\n",
+    "- d_inner = 2048\n",
+    "- dropout = 0.1\n",
+    "- n_position = 50\n",
+    "- pad_idx = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.vocab['[PAD]']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_pad_mask(seq, pad_idx):\n",
+    "    return (seq != pad_idx).unsqueeze(-2)"
    ]
   },
   {
@@ -224,28 +390,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def convert_data(data_df, case):\n",
-    "    global tokenizer\n",
+    "from torch import nn\n",
+    "from model.Models import Encoder\n",
+    "\n",
+    "class Naroho(nn.Module):\n",
     "    \n",
-    "    tokens, masks, segments, targets = [], [], [], []\n",
+    "    def __init__(self, n_vocab, pad_idx, d_word_vec=512, d_model=512, d_inner=2048,\n",
+    "                 n_layers=6, n_head=8, d_k=64, dropout=0.1, n_position=50):\n",
+    "        super().__init__()\n",
+    "        self.encoder = Encoder(n_src_vocab=n_vocab, d_word_vec=d_word_vec, n_layers=n_layers, \n",
+    "                               n_head=n_head, d_k=d_k, d_v=d_k, d_model=d_model, pad_idx=pad_idx,\n",
+    "                               dropout=dropout, n_position=n_position, scale_emb=False)\n",
+    "        self.linear = nn.Linear(d_model,n_vocab,bias=False)\n",
+    "        \n",
+    "        self.pad_idx = pad_idx\n",
     "    \n",
-    "    for i in tqdm(range(len(data_df))):\n",
-    "        # tokenize\n",
-    "        token = \n",
+    "    def forward(self, context):\n",
+    "\n",
+    "        mask = get_pad_mask(context, self.pad_idx)\n",
     "        \n",
-    "        # making segment\n",
-    "        segment = [0]*SEQ_LEN\n",
-    "        \n",
-    "        # token, segment\n",
-    "        \n",
-    "        # \n",
-    "    "
+    "        enc_output, *_ = self.encoder(context, mask)\n",
+    "        seq_logit = self.linear(enc_output)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
