--- a/EDA & Preprocessing.ipynb
+++ b/EDA & Preprocessing.ipynb
@@ -320,7 +320,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('Ethics-Korean')",
+   "display_name": "Python 3.6.13 ('3dmpp')",
    "language": "python",
    "name": "python3"
   },
@@ -334,12 +334,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.6.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d7b8a9d296651b950055feafaab8f47ff1cee70807e6c570958d0b27d2589bac"
+    "hash": "85c4b9dbdd6688a76e9c647aee150935dd88998ce1a7e35c0ee9508d662dcee4"
    }
   }
  },
